# vd-agent-linux

./: .gitignore  99-vdagent.rules  ChangeLog  Makefile  Makefile.am  NEWS  README  README.RHEL-5  TODO  autogen.sh  configure.ac  console-kit.c  console-kit.h  spice-vdagent.desktop  spice-vdagentd.sh  udscs.c  udscs.h  vdagent-virtio-port.c  vdagent-virtio-port.h  vdagent-x11.c  vdagent-x11.h  vdagent.c  vdagentd-proto-strings.h  vdagentd-proto.h  vdagentd-uinput.c  vdagentd-uinput.h  vdagentd.c
data/: spice-vdagent.1.in  spice-vdagent.desktop  spice-vdagentd.1.in  spice-vdagentd.service  xorg.conf.RHEL-5
data/modules-load.d/: spice-vdagentd.conf
src/: console-kit.c  dummy-session-info.c  glib-compat.h  session-info.h  systemd-login.c  udscs.c  udscs.h  vdagent-audio.c  vdagent-audio.h  vdagent-file-xfers.c  vdagent-file-xfers.h  vdagent-virtio-port.c  vdagent-virtio-port.h  vdagent-x11-priv.h  vdagent-x11-randr.c  vdagent-x11.c  vdagent-x11.h  vdagent.c  vdagentd-port-forward.c  vdagentd-port-forward.h  vdagentd-proto-strings.h  vdagentd-proto.h  vdagentd-uinput.c  vdagentd-uinput.h  vdagentd-xorg-conf.c  vdagentd-xorg-conf.h  vdagentd.c
